--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
  <!-- font awesome -->
  <script src="js/all.js"></script>
- <title>Counter Project</title>
+ <title>Counter Project Mal</title>
  <style>
  </style>
 </head>
